kubernetes/email-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: email
  labels:
    name: email
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
      - name: email
        image: thinkingserious/email:latest
      restartPolicy: Always
