kubernetes/github-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: github
  labels:
    name: github
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: github
    spec:
      containers:
      - name: github
        image: thinkingserious/github:latest
      restartPolicy: Always
