kubernetes/sms-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sms
  labels:
    name: sms
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sms
    spec:
      containers:
      - name: sms
        image: thinkingserious/sms:latest
      restartPolicy: Always
