kubernetes/web-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
    name: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: thinkingserious/web:latest
      restartPolicy: Always
