kubernetes/email-service.yml
apiVersion: v1
kind: Service
metadata:
  name: email
  labels:
    service: email
spec:
  selector:
    app: email
  ports:
  - port: 5000
    targetPort: 5000
