kubernetes/github-service.yml
apiVersion: v1
kind: Service
metadata:
  name: github
  labels:
    service: github
spec:
  selector:
    app: github
  ports:
  - port: 5000
    targetPort: 5000
