kubernetes/sms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sms
  labels:
    service: sms
spec:
  selector:
    app: sms
  ports:
  - port: 5000
    targetPort: 5000
