kubernetes/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    service: web
spec:
  selector:
    app: web
  ports:
  - port: 5000
    targetPort: 5000
